background layout bug on mobile #15

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,12 +11,16 @@
 /* background image */
 body {
   background-image: url("../resources/background.jpg");
-  background-repeat: no-repeat;
+  background-repeat: no-repeat; 
+  background-position: center;
   background-attachment: fixed;
-  background-size: 100vw calc(100% + 200px);
+  webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height:100%;
+  width:100vw; 
   font-family: pokemonFontSolid;
-  min-height: -webkit-fill-available;
-  height: 100vh;
 }
 
 .navbar {
